--- a/product-validation-service/src/main/resources/application.yml
+++ b/product-validation-service/src/main/resources/application.yml
@@ -3,7 +3,13 @@ server:
 
 
 spring:
-
+  kafka:
+    bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
+    topic:
+      teste: teste
+    consumer:
+      group-id: product-validation-group
+      auto-offset-reset: latest
 
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -17,3 +23,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+logging:
+  level:
+    org:
+      apache:
+        kafka: OFF
