correct words -> inventory-success: inventory-success

--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
     topic:
       orchestrator: orchestrator
-      inventory-success: product-success
+      inventory-success: inventory-success
       inventory-fail: inventory-fail
     consumer:
       group-id: inventory-group
